# serializer version: 1
# name: test_events[aqara_sensor_w100][event.climate_sensor_w100-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.climate_sensor_w100',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-000000000000004B-MatterNodeDevice-3-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[aqara_sensor_w100][event.climate_sensor_w100-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Climate Sensor W100',
    }),
    'context': <ANY>,
    'entity_id': 'event.climate_sensor_w100',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[aqara_sensor_w100][event.climate_sensor_w100_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.climate_sensor_w100_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-000000000000004B-MatterNodeDevice-4-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[aqara_sensor_w100][event.climate_sensor_w100_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Climate Sensor W100',
    }),
    'context': <ANY>,
    'entity_id': 'event.climate_sensor_w100_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[aqara_sensor_w100][event.climate_sensor_w100_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.climate_sensor_w100_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-000000000000004B-MatterNodeDevice-5-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[aqara_sensor_w100][event.climate_sensor_w100_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Climate Sensor W100',
    }),
    'context': <ANY>,
    'entity_id': 'event.climate_sensor_w100_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.hjmt_6b',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000003-MatterNodeDevice-1-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'HJMT-6B',
    }),
    'context': <ANY>,
    'entity_id': 'event.hjmt_6b',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.hjmt_6b_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000003-MatterNodeDevice-2-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'HJMT-6B',
    }),
    'context': <ANY>,
    'entity_id': 'event.hjmt_6b_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.hjmt_6b_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000003-MatterNodeDevice-3-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'HJMT-6B',
    }),
    'context': <ANY>,
    'entity_id': 'event.hjmt_6b_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.hjmt_6b_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000003-MatterNodeDevice-4-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'HJMT-6B',
    }),
    'context': <ANY>,
    'entity_id': 'event.hjmt_6b_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.hjmt_6b_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000003-MatterNodeDevice-5-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'HJMT-6B',
    }),
    'context': <ANY>,
    'entity_id': 'event.hjmt_6b_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.hjmt_6b_6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000003-MatterNodeDevice-6-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[haojai_switch][event.hjmt_6b_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'HJMT-6B',
    }),
    'context': <ANY>,
    'entity_id': 'event.hjmt_6b_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_bilresa_dual_button][event.bilresa_dual_button-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_dual_button',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000089-MatterNodeDevice-1-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_bilresa_dual_button][event.bilresa_dual_button-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'BILRESA dual button',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_dual_button',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_bilresa_dual_button][event.bilresa_dual_button_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_dual_button_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000089-MatterNodeDevice-2-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_bilresa_dual_button][event.bilresa_dual_button_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'BILRESA dual button',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_dual_button_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_scroll_wheel',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000002-MatterNodeDevice-1-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
      ]),
      'friendly_name': 'BILRESA scroll wheel',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_scroll_wheel',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_scroll_wheel_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000002-MatterNodeDevice-2-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
      ]),
      'friendly_name': 'BILRESA scroll wheel',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_scroll_wheel_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_scroll_wheel_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000002-MatterNodeDevice-3-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'BILRESA scroll wheel',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_scroll_wheel_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_scroll_wheel_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000002-MatterNodeDevice-4-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
      ]),
      'friendly_name': 'BILRESA scroll wheel',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_scroll_wheel_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_scroll_wheel_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000002-MatterNodeDevice-5-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
      ]),
      'friendly_name': 'BILRESA scroll wheel',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_scroll_wheel_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_scroll_wheel_6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000002-MatterNodeDevice-6-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'BILRESA scroll wheel',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_scroll_wheel_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_7-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_scroll_wheel_7',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000002-MatterNodeDevice-7-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_7-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
      ]),
      'friendly_name': 'BILRESA scroll wheel',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_scroll_wheel_7',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_8-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_scroll_wheel_8',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000002-MatterNodeDevice-8-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_8-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
      ]),
      'friendly_name': 'BILRESA scroll wheel',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_scroll_wheel_8',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_9-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bilresa_scroll_wheel_9',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000002-MatterNodeDevice-9-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[ikea_scroll_wheel][event.bilresa_scroll_wheel_9-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'BILRESA scroll wheel',
    }),
    'context': <ANY>,
    'entity_id': 'event.bilresa_scroll_wheel_9',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.white_series_onoff_switch',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000100-MatterNodeDevice-3-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'White Series OnOff Switch',
    }),
    'context': <ANY>,
    'entity_id': 'event.white_series_onoff_switch',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.white_series_onoff_switch_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000100-MatterNodeDevice-4-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'White Series OnOff Switch',
    }),
    'context': <ANY>,
    'entity_id': 'event.white_series_onoff_switch_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.white_series_onoff_switch_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000100-MatterNodeDevice-5-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'White Series OnOff Switch',
    }),
    'context': <ANY>,
    'entity_id': 'event.white_series_onoff_switch_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[inovelli_vtm31][event.inovelli-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.inovelli',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-00000000000000C5-MatterNodeDevice-3-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[inovelli_vtm31][event.inovelli-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Inovelli',
    }),
    'context': <ANY>,
    'entity_id': 'event.inovelli',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[inovelli_vtm31][event.inovelli_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.inovelli_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-00000000000000C5-MatterNodeDevice-4-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[inovelli_vtm31][event.inovelli_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Inovelli',
    }),
    'context': <ANY>,
    'entity_id': 'event.inovelli_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[inovelli_vtm31][event.inovelli_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.inovelli_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-00000000000000C5-MatterNodeDevice-5-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[inovelli_vtm31][event.inovelli_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Inovelli',
    }),
    'context': <ANY>,
    'entity_id': 'event.inovelli_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[mock_generic_switch][event.mock_generic_switch-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.mock_generic_switch',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000013-MatterNodeDevice-1-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[mock_generic_switch][event.mock_generic_switch-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Mock Generic Switch',
    }),
    'context': <ANY>,
    'entity_id': 'event.mock_generic_switch',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[mock_generic_switch_multi][event.mock_generic_switch_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.mock_generic_switch_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000012-MatterNodeDevice-1-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[mock_generic_switch_multi][event.mock_generic_switch_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Mock Generic Switch',
    }),
    'context': <ANY>,
    'entity_id': 'event.mock_generic_switch_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[mock_generic_switch_multi][event.mock_generic_switch_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.mock_generic_switch_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000012-MatterNodeDevice-2-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[mock_generic_switch_multi][event.mock_generic_switch_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'multi_press_ongoing',
        'multi_press_complete',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Mock Generic Switch',
    }),
    'context': <ANY>,
    'entity_id': 'event.mock_generic_switch_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[silabs_light_switch][event.light_switch_example-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.light_switch_example',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-000000000000008E-MatterNodeDevice-2-MatterMultiPressSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[silabs_light_switch][event.light_switch_example-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
      ]),
      'friendly_name': 'Light switch example',
    }),
    'context': <ANY>,
    'entity_id': 'event.light_switch_example',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
